# Web_app_mailing

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
client_connect/: admin.py  apps.py  forms.py  models.py  services.py  urls.py  views.py
client_connect/fixture/: mailing_fixture.json  message_fixture.json  recipient_fixture.json
client_connect/management/commands/: add_test_data.py  send_mailing.py
client_connect/migrations/: 0001_initial.py  0002_mailing_owner_message_owner_recipient_owner.py  0003_alter_mailing_options_alter_message_options_and_more.py  0004_remove_mailing_created_at_remove_mailing_update_at_and_more.py  0005_alter_mailing_end_time_alter_mailing_start_time.py  0006_alter_sendingattempt_options.py  0007_alter_mailing_options.py  0008_alter_mailing_status.py
client_connect/templates/client_connect/: base.html  header.html  home.html
client_connect/templates/client_connect/mailing/: mailing_confirm_delete.html  mailing_detail.html  mailing_form.html  mailings_list.html
config/: settings.py  urls.py
users/: admin.py  forms.py  models.py  services.py  urls.py  views.py
users/fixture/: group_fixture.json  user_fixture.json
users/management/commands/: add_groups.py
users/migrations/: 0001_initial.py  0002_alter_customuser_options.py  0003_alter_customuser_options.py
users/templates/users/: login.html  new_password.html  password_reset_complete.html  password_reset_confirm.html  password_reset_done.html  password_reset_form.html  register.html  user_detail.html  users_list.html
(+9 files in other folders)
